# plutosdr-fw

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md
boot/: Makefile
fpga/: Makefile
kernel/: Makefile
rootfs/: Makefile
rootfs/scripts/: legal_info_html.sh
scripts/: create_fsbl_project.tcl  pluto.its
src/fpga0/: Makefile  system_project.tcl
src/fpga1/: .gitignore  system_bd.tcl  system_constr.xdc  system_project.tcl  system_top.v
src/fpga2/: rs232tx.v  system_bd.tcl  system_project.tcl  system_top.v  zynq-pluto-sdr-revb.dts
src/iiotest/: CMakeLists.txt
src/iiotest/src/: ad9361_rx.cpp
src/scripts/: arm_cortex_a7-native.cmake  arm_cortex_a9-native.cmake  create_fsbl_project.tcl  get_default_envs.sh  pluto.its
